
2008-06-23  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
	Handles UDPF_NONE value.
	(utrace_derived_probe_group::emit_vm_callback_probe_decl): New
	function.
	(utrace_derived_probe_group::emit_module_decls): Calls
	emit_vm_callback_probe_decl() to set up vm_callbacks.

2008-06-23  Stan Cox  <scox@redhat.com>

	* tapsets.cxx (enum line_t): Add RANGE and WILDCARD.
	(iterate_over_srcfile_lines): Change lineno parm to lines[].
	Support RANGE and WILDCARD.
	(dwarf_query): Change line to line[]
	(dwarf_query::parse_function_spec): Parse RANGE and WILDCARD.

2008-06-20  wcohen  <wcohen@redhat.com>

	* stapfuncs.5.in: Add documentation for tapset/dev.stp functions.

2008-06-18  Josh Stone  <joshua.i.stone@intel.com>

	PR 6644
	* elaborate.cxx (dead_stmtexpr_remover::visit_block): Flatten nested
	block statements into a single block.
	(dead_stmtexpr_remover::visit_if_statement): Remove the possibility
	of if_statements with a null thenblock.  When an if lacks both then
	and else, either remove it completely or reduce it to a simple
	statment evaluating the condition.  With an else and no then, invert
	the condition and else becomes then.
	(void_statement_reducer): New optimization visitor that breaks
	statements in void context into smaller pieces, to expose more
	optimization opportunities.
	(semantic_pass_opt5, semantic_pass_opt6): Bump opt5 to opt6, and
	create a new opt5 that runs through void_statement_reducer.

2008-06-16  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (print_locals): Produce nothing instead of
	"(alternatives: (none found))" if no alternatives were found.

2008-06-16  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (session::print_warning): Change to take optional
	token as argument.
	(*): Adjust callers of print_warning() to pass a token.
	(print_token): New function, eliminate recent file name duplication.
	(print_error): Use it too.