@@ -751,10 +751,12 @@ In most cases, the path should be relative to the top of the
 linux source directory, although an absolute path may be necessary for some kernels.
 If a relative pathname doesn't work, try absolute.
 \item The third part is optional if the file name part was given. It identifies
-the line number in the source file, preceded by a '':'' or ''+''.   
+the line number in the source file, preceded by a ``:'' or ``+''.   
 The line number is assumed to be an
-absolute line number if preceded by a '':'', or relative to the entry of
-function if preceded by a ''+''.
+absolute line number if preceded by a ``:'', or relative to the entry of
+the function if preceded by a ``+''.
+All the lines in the function can be matched with ``:*''.
+A range of lines x through y can be matched with ``:x-y''.
 
 \end{enumerate}
 Alternately, specify PATTERN as a numeric constant to indicate a relative
