@@ -3,7 +3,6 @@
 set test "stmt_rel"
 set ::result_string {PASS bio_init
 PASS line number
-PASS address
 PASS wildcard
 }
 
